--- a/app/src/main/res/layout/activity_management_quiz.xml
+++ b/app/src/main/res/layout/activity_management_quiz.xml
@@ -25,10 +25,8 @@
                 android:layout_width="227dp"
                 android:layout_height="87dp"
                 android:layout_marginStart="64dp"
-                android:layout_marginLeft="64dp"
                 android:layout_marginTop="25dp"
                 android:layout_marginEnd="64dp"
-                android:layout_marginRight="64dp"
                 android:text="Management Round"
                 android:textColor="#0C233C"
                 android:textSize="35dp"
@@ -43,10 +41,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -68,6 +64,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/management_edittext"
                     android:ems="10"
+                    android:scrollbars="vertical"
                     android:fontFamily="@font/helveticaneue_medium"
                     android:gravity="start|top"
                     android:hint="Your Answer"
@@ -85,10 +82,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -110,6 +105,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/management_edittext"
                     android:ems="10"
+                    android:scrollbars="vertical"
                     android:fontFamily="@font/helveticaneue_medium"
                     android:gravity="start|top"
                     android:hint="Your Answer"
@@ -127,10 +123,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -152,6 +146,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/management_edittext"
                     android:ems="10"
+                    android:scrollbars="vertical"
                     android:fontFamily="@font/helveticaneue_medium"
                     android:gravity="start|top"
                     android:hint="Your Answer"
@@ -169,10 +164,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -194,6 +187,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/management_edittext"
                     android:ems="10"
+                    android:scrollbars="vertical"
                     android:fontFamily="@font/helveticaneue_medium"
                     android:gravity="start|top"
                     android:hint="Your Answer"
@@ -211,10 +205,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -236,6 +228,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/management_edittext"
                     android:ems="10"
+                    android:scrollbars="vertical"
                     android:fontFamily="@font/helveticaneue_medium"
                     android:gravity="start|top"
                     android:hint="Your Answer"
@@ -253,10 +246,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -276,6 +267,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="161dp"
                     android:layout_marginTop="10dp"
+                    android:scrollbars="vertical"
                     android:background="@drawable/management_edittext"
                     android:ems="10"
                     android:fontFamily="@font/helveticaneue_medium"
@@ -295,10 +287,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -320,6 +310,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/management_edittext"
                     android:ems="10"
+                    android:scrollbars="vertical"
                     android:fontFamily="@font/helveticaneue_medium"
                     android:gravity="start|top"
                     android:hint="Your Answer"
@@ -337,10 +328,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -362,6 +351,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/management_edittext"
                     android:ems="10"
+                    android:scrollbars="vertical"
                     android:fontFamily="@font/helveticaneue_medium"
                     android:gravity="start|top"
                     android:hint="Your Answer"
@@ -379,10 +369,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -404,6 +392,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/management_edittext"
                     android:ems="10"
+                    android:scrollbars="vertical"
                     android:fontFamily="@font/helveticaneue_medium"
                     android:gravity="start|top"
                     android:hint="Your Answer"
@@ -421,10 +410,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -446,6 +433,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/management_edittext"
                     android:ems="10"
+                    android:scrollbars="vertical"
                     android:fontFamily="@font/helveticaneue_medium"
                     android:gravity="start|top"
                     android:hint="Your Answer"
@@ -462,11 +450,7 @@
                 android:id="@+id/submit_button_management"
                 android:layout_width="112dp"
                 android:layout_height="45dp"
-                android:layout_marginStart="150dp"
-                android:layout_marginLeft="150dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="149dp"
-                android:layout_marginRight="149dp"
                 android:layout_marginBottom="15dp"
                 android:background="@drawable/management_submit"
                 android:fontFamily="@font/helveticaneu_bold"
@@ -486,7 +470,9 @@
                 android:layout_marginTop="22dp"
                 android:layout_marginEnd="21dp"
                 android:layout_marginRight="21dp"
-                android:text="TextView"
+                android:background="@drawable/timetxtbg"
+                android:text="9:00"
+                android:padding="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
