--- a/app/src/main/res/layout/activity_recruitment_quiz.xml
+++ b/app/src/main/res/layout/activity_recruitment_quiz.xml
@@ -102,9 +102,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/helveticaneue_medium"
-                android:paddingLeft="15dp"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp"
+                android:padding="15dp"
                 android:text="List"
                 android:textColor="#707070"
                 android:textSize="20dp"
@@ -138,9 +136,7 @@
                 android:id="@+id/option2Text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp"
-                android:paddingLeft="15dp"
+                android:padding="15dp"
                 android:fontFamily="@font/helveticaneue_medium"
                 android:text="Dictionary"
                 android:textColor="#707070"
@@ -149,7 +145,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
+                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
@@ -175,9 +171,7 @@
                 android:id="@+id/option3Text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp"
-                android:paddingLeft="15dp"
+                android:padding="15dp"
                 android:fontFamily="@font/helveticaneue_medium"
                 android:text="Tuple"
                 android:textColor="#707070"
@@ -186,7 +180,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
+                />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
@@ -212,9 +206,7 @@
                 android:id="@+id/option4Text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp"
-                android:paddingLeft="15dp"
+                android:padding="15dp"
                 android:fontFamily="@font/helveticaneue_medium"
                 android:text="Array"
                 android:textColor="#707070"
@@ -223,63 +215,73 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
+                />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonTechnicalQuizNext"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/skipnxtbtnsD"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="43dp"
-        android:layout_marginEnd="41dp"
-        android:layout_marginRight="41dp"
-        android:background="@drawable/quiznext"
-        android:fontFamily="@font/helveticaneue_medium"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:paddingLeft="45dp"
-        android:paddingTop="10dp"
-        android:paddingRight="45dp"
-        android:paddingBottom="10dp"
-        android:text="Next"
-        android:textAllCaps="false"
-        android:textColor="#4766FF"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardOption4" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonTechnicalQuizSkip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="49dp"
-        android:layout_marginLeft="49dp"
-        android:layout_marginTop="43dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
-        android:background="@drawable/quiznext"
-        android:fontFamily="@font/helveticaneue_medium"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:paddingLeft="45dp"
-        android:paddingTop="10dp"
-        android:paddingRight="45dp"
-        android:paddingBottom="10dp"
-        android:text="Skip"
-        android:textAllCaps="false"
-        android:textColor="#4766FF"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/buttonTechnicalQuizNext"
+        android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardOption4" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cardOption4">
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonTechnicalQuizSkip"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="15dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/quiznext"
+            android:fontFamily="@font/helveticaneue_medium"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:paddingLeft="45dp"
+            android:paddingTop="10dp"
+            android:paddingRight="45dp"
+            android:paddingBottom="10dp"
+            android:text="Skip"
+            android:textAllCaps="false"
+            android:textColor="#4766FF"
+            android:textSize="20dp"
+
+            />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonTechnicalQuizNext"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="50dp"
+            android:background="@drawable/quiznext"
+            android:fontFamily="@font/helveticaneue_medium"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:paddingLeft="45dp"
+            android:paddingTop="10dp"
+            android:paddingRight="45dp"
+            android:paddingBottom="10dp"
+            android:text="Next"
+            android:textAllCaps="false"
+            android:textColor="#4766FF"
+            android:textSize="20dp"
+            />
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/timer_technical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
+        android:background="@drawable/timetxtbg"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:text="TextView"
+        android:padding="4dp"
+        android:text="9:00"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
