--- a/app/src/main/res/layout/activity_design_quiz.xml
+++ b/app/src/main/res/layout/activity_design_quiz.xml
@@ -273,15 +273,14 @@
         android:id="@+id/timetextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
-        android:text="1:30s"
+        android:background="@drawable/timetxtbg"
         android:padding="5dp"
+        android:text="1:30s"
         android:textColor="#000"
         android:textSize="15dp"
-        android:background="@drawable/timetxtbg"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/skipnxtbtnsD"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
