--- a/app/src/main/res/layout/activity_recruitment_quiz.xml
+++ b/app/src/main/res/layout/activity_recruitment_quiz.xml
@@ -276,13 +276,13 @@
         android:id="@+id/timer_technical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/timetxtbg"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/timetxtbg"
         android:padding="4dp"
         android:text="9:00"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/skipnxtbtnsD" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
