--- a/app/src/main/res/layout/activity_design_quiz.xml
+++ b/app/src/main/res/layout/activity_design_quiz.xml
@@ -273,14 +273,14 @@
         android:id="@+id/timetextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
         android:background="@drawable/timetxtbg"
         android:padding="5dp"
         android:text="1:30s"
         android:textColor="#000"
-        android:textSize="15dp"
-        android:layout_marginTop="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/skipnxtbtnsD"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/skipnxtbtnsD" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
