--- a/app/src/main/res/layout/slidelayoutonboard.xml
+++ b/app/src/main/res/layout/slidelayoutonboard.xml
@@ -24,37 +24,36 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
-        android:padding="5dp"
         android:fontFamily="@font/robotomedium"
-        android:text="ADG Interview Ground"
+        android:padding="5dp"
+        android:text="ADG - VIT"
         android:textAlignment="center"
         android:textColor="#0C233C"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageonboard"/>
+        app:layout_constraintTop_toBottomOf="@+id/imageonboard" />
 
-        <TextView
-            android:id="@+id/descOnboard"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginEnd="20dp"
-            android:padding="35dp"
-            android:fontFamily="@font/robotolight"
-            android:singleLine="false"
-            android:text="ADG’s official coding app which lets you code with your smartphone"
-            android:textAlignment="center"
-            android:textColor="#222222"
-            android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@+id/titleOnboard"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+        android:id="@+id/descOnboard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:fontFamily="@font/robotolight"
+        android:padding="35dp"
+        android:singleLine="false"
+        android:text="ADG's official app which will open the doors to endless possibilities, into the realm of unexplored"
+        android:textAlignment="center"
+        android:textColor="#222222"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleOnboard" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
