--- a/app/src/main/res/layout/fragment_homefragment.xml
+++ b/app/src/main/res/layout/fragment_homefragment.xml
@@ -55,8 +55,8 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/domainsCardview"
-                    android:layout_width="150dp"
-                    android:layout_height="125dp"
+                    android:layout_width="190dp"
+                    android:layout_height="150dp"
                     android:foregroundGravity="center_horizontal"
                     app:cardCornerRadius="20dp">
 
@@ -73,8 +73,8 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/projectsCardview"
-                    android:layout_width="150dp"
-                    android:layout_height="125dp"
+                    android:layout_width="190dp"
+                    android:layout_height="150dp"
                     android:layout_marginLeft="10dp"
                     android:foregroundGravity="center_horizontal"
                     app:cardCornerRadius="20dp">
@@ -93,8 +93,8 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/eventsCardview"
-                    android:layout_width="150dp"
-                    android:layout_height="125dp"
+                    android:layout_width="190dp"
+                    android:layout_height="150dp"
                     android:layout_marginLeft="10dp"
                     android:foregroundGravity="center_horizontal"
                     app:cardCornerRadius="20dp">
@@ -112,12 +112,11 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/teamsCardview"
-                    android:layout_width="150dp"
+                    android:layout_width="190dp"
                     android:layout_height="125dp"
-                    app:cardCornerRadius="20dp"
                     android:layout_marginLeft="10dp"
                     android:foregroundGravity="center_horizontal"
-                    >
+                    app:cardCornerRadius="20dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -165,7 +164,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:layout_marginBottom="9dp"
             android:background="@drawable/carddoubtbg"
             app:cardCornerRadius="10dp"
             app:layout_constraintTop_toBottomOf="@+id/homeEventsRecycler"
