--- a/app/src/main/res/layout/fragment_settings_fragment.xml
+++ b/app/src/main/res/layout/fragment_settings_fragment.xml
@@ -126,49 +126,28 @@
         android:layout_gravity="start"
          />
 
-    <Button
-        android:id="@+id/bugReportBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="    Bug Report"
-        android:drawableLeft="@drawable/bugreport"
-        android:textColor="#000000"
-        android:textSize="14sp"
-        android:paddingLeft="15dp"
-        android:textAlignment="viewStart"
-        android:background="@drawable/buttonbgsettings"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:fontFamily="@font/helveticaneue_medium"
-        android:textAllCaps="false"
-        android:layout_marginTop="7dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/feedbackBtn"
-        android:layout_gravity="start" />
 
     <Button
         android:id="@+id/aboutUsBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/buttonbgsettings"
         android:drawableLeft="@drawable/aboutus"
+        android:fontFamily="@font/helveticaneue_medium"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:paddingLeft="15dp"
         android:text="    About Us"
+        android:textAlignment="viewStart"
+        android:textAllCaps="false"
         android:textColor="#000000"
         android:textSize="14sp"
-        android:paddingLeft="15dp"
-        android:textAlignment="viewStart"
-        android:background="@drawable/buttonbgsettings"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:fontFamily="@font/helveticaneue_medium"
-        android:textAllCaps="false"
-        android:layout_marginTop="7dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/bugReportBtn"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_gravity="start" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/feedbackBtn" />
 
     <Button
         android:id="@+id/ReferBtn"
