--- a/app/src/main/res/layout/fragment_homefragment.xml
+++ b/app/src/main/res/layout/fragment_homefragment.xml
@@ -34,7 +34,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:background="@drawable/adglogo3_1"
+            android:background="@drawable/adglogo"
             android:foreground="?android:attr/selectableItemBackground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
